--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   video_box: ^0.17.0
   provider: ^6.1.2
   meta: ^1.12.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_test:
