--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   firebase_auth: ^5.1.4
   bloc: ^8.1.4
   cloud_firestore: ^5.2.1
-  video_box: ^0.17.0
+  video_box:
+    git:
+      url: https://github.com/mahmoudelgharabawi/flutter_video_box.git
   provider: ^6.1.2
   meta: ^1.12.0
   image_picker: ^1.1.2
